fixed padding and margins for alignment of text

--- a/app/assets/stylesheets/_orders.scss
+++ b/app/assets/stylesheets/_orders.scss
@@ -64,12 +64,11 @@
 
 #order-info{
   ul{
-    padding-left:0px;
     display:block;
   }
 
   li{
-    margin:10px;
+    margin-left: -42px;
     text-align:center;
   }
 }
